# Hemi-discordbot

Discord-bot/: main.py  pyproject.toml
